--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.GameOneActivity"></activity>
+        <activity android:name=".ui.GameOneActivity" />
+        <activity android:name=".ui.GameTwoActivity" />
+        <activity android:name=".ui.HallOfFameActivity"></activity>
     </application>
 
 </manifest>
