--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,6 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.github.Lukle:ClickableAreasImages:v0.1'
     testCompile 'junit:junit:4.12'
-    compile 'com.github.chrisbanes:PhotoView:2.0.0'
 }
