--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         </activity>
         <activity android:name=".ui.GameOneActivity" />
         <activity android:name=".ui.GameTwoActivity" />
-        <activity android:name=".ui.HallOfFameActivity"></activity>
+        <activity android:name=".ui.HallOfFameActivity" />
+        <activity android:name=".ui.EndGame"></activity>
     </application>
 
 </manifest>
