Block on portrait app

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,18 +9,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.GameOneActivity" />
-        <activity android:name=".ui.GameTwoActivity" />
-        <activity android:name=".ui.HallOfFameActivity" />
-        <activity android:name=".ui.EndGame" />
-        <activity android:name=".ui.GameThreeActivity"></activity>
+        <activity android:name=".ui.GameOneActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".ui.GameTwoActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".ui.HallOfFameActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".ui.EndGame"
+            android:screenOrientation="portrait" />
+        <activity android:name=".ui.GameThreeActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
